# brew-search

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
brew_search/: __main__.py
